add ADBC tests for Go, C#, Java, Kotlin, Python, Clojure